# Project-Datasky

./: CMakeLists.txt  README.md  a.out  chunk.h  designdoc.md  glad.c  globalmap.h  object.h  objectgenerator.cpp  objectgenerator.h  player.h  program.cpp  shader.h  texture.cpp  texture.h  tile.cpp  tree.cpp  tree.h
src/: main.cpp
src/objects/: object.cpp  objectgenerator.cpp  objectgenerator.h
src/player/: player.cpp  player.h
src/shaders/: shader.cpp  sprite.frag  sprite.vert
src/textures/: texture.cpp  texturemap.xcf
src/worldgen/: chunk.cpp  chunk.h  globalmap.cpp  globalmap.h  tile.h
textures/: texturemap.xcf
